Añadiendo Captura.png y sustituyendo el lorem por Consejos para mejorar los resultados académicos

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
     <title>Promedio de Notas</title>
-    
+    <style>
+        .consejos{
+            text-align: left;
+            margin: 0 140px;
+        }
+    </style>
         
 </head>
 <body>
@@ -44,6 +49,17 @@
             <td><b>9.15</b></td> 
         </tr>
     </table>
+<br>
+<br>
+<br>
+<h3>Consejos para mejorar los resultados académicos:</h3>
+    <div class="consejos">
+        1. Identifica las asignaturas o áreas que requieren más atención y
+        establece metas específicas para mejorar. <br>
+        2. Organiza tu tiempo de manera eficiente. Crea un calendario 
+        de estudios que incluya fechas límite, exámenes y proyectos. <br>
+        3. Participa en clase, haz preguntas y comparte tus ideas.
+    </div>
 
 </body>
 </html>
